[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valley"
version = "0.1.0"
description = "A video assistant towards instruction tuning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "einops", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "requests", "sentencepiece", "tokenizers==0.12.1",
    "torch", "torchvision", "uvicorn",
    "transformers @ git+https://github.com/huggingface/transformers.git@cae78c46", 
    "ninja", "decord","einops","scikit-image","opencv-python-headless"
]

[project.urls]
"Bug Tracker" = "https://github.com/RupertLuo/Valley/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]