[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valley"
version = "2.0.0"
description = "A video assistant towards instruction tuning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "einops", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "ninja", "decord","einops","scikit-image","opencv-python-headless", "prettytable","rouge_score", "bert_score","datasets","evaluate","packaging",
    "requests", "sentencepiece", "tokenizers>=0.12.1","protobuf",
    "torch==2.0.0", 
    "torchvision==0.15.1", 
    "uvicorn",
    "transformers==4.35.0", 
    "peft==0.5.0",
    "deepspeed==0.9.5", 
]

[project.urls]
"Bug Tracker" = "https://github.com/RupertLuo/Valley/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]